--- a/client/package.json
+++ b/client/package.json
@@ -38,7 +38,6 @@
     "@storybook/addon-links": "^5.3.18",
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
-    "@storybook/react": "^5.3.18",
-    "eslint-plugin-import": "^2.20.2"
+    "@storybook/react": "^5.3.18"
   }
 }
