--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "scripts": {
-    "heroku-prebuild": "cd client && npm ci",
+    "heroku-prebuild": "cd client && npm i",
     "dev-client": "cd client && npm start",
     "build": "cd client && npm run build && npm run build-storybook",
     "storybook": "cd client && npm run storybook",
@@ -42,6 +42,10 @@
     "*.{js,jsx}": "eslint --fix",
     "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write"
   },
+  "cacheDirectories": [
+    "client/node_modules",
+    "node_modules"
+  ],
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
