--- a/package.json
+++ b/package.json
@@ -54,7 +54,6 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.5",
-    "mongoose": "^5.9.7",
-    "react-query": "^1.2.9"
+    "mongoose": "^5.9.7"
   }
 }
