Add dev script without storybook

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev-client": "cd client && npm start",
     "build": "cd client && npm run build && npm run build-storybook",
     "storybook": "cd client && npm run storybook",
-    "dev": "concurrently --kill-others-on-fail \"npm run dev-server\" \"npm run dev-client\" \"npm run storybook\"",
+    "dev": "concurrently --kill-others-on-fail \"npm run dev-server\" \"npm run dev-client\"",
+    "dev-story": "concurrently --kill-others-on-fail \"npm run dev-server\" \"npm run dev-client\" \"npm run storybook\"",
     "dev-server": "nodemon server.js",
     "start": "node server.js"
   },
