Add secure sign in/log out and sign up of user (#38)
* Add basic routes

* Add register and login pages

* Build submit form for registration

* Refactor authentication form with conditional rendering

* Add new private route to test jwt

* Add cookie-parser and store jwt in cookie

* Add custom hook for authentication

* Make custom hook work with refactoring/outsourcing

* Fix placeholder behaviour

* Add clear error message depending on error thrown on server side

* Refactor handleSubmit

* Fix loading display

* Delete comments

* Refactoring the sign in and up process  (#43)

* Delete comments

* Install react-query

* Implement react query useMutation hook for register process

* Implement context api to create an auth context for user authentication

* Optimize context and react query mutate hook

* Fix naming and console.log

* Refactor user context provider

* Fix unnecessary prop types

* Add nodemon config so it won't restart on client changes

* Add auth context for a logout functionality

* Implement logout function in header

* Fix various naming issues and import correct files

* Change to useUserInformation function

* Fix some issues with setting user and auth in auth form

* Fix proptype deepscan issue

* Fix display issue of layout

* Add authentication in react router

* Change the redirect router when not authenticated

* Uninstall react query on server side

* Change private routing

* Change auth routes to user routes

* Add dev script without storybook

* Add home route directing to login

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev-client": "cd client && npm start",
     "build": "cd client && npm run build && npm run build-storybook",
     "storybook": "cd client && npm run storybook",
-    "dev": "concurrently --kill-others-on-fail \"npm run dev-server\" \"npm run dev-client\" \"npm run storybook\"",
+    "dev": "concurrently --kill-others-on-fail \"npm run dev-server\" \"npm run dev-client\"",
+    "dev-story": "concurrently --kill-others-on-fail \"npm run dev-server\" \"npm run dev-client\" \"npm run storybook\"",
     "dev-server": "nodemon server.js",
     "start": "node server.js"
   },
@@ -49,6 +50,7 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
