--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,8 @@
     "@storybook/addon-viewport": "^5.3.18",
     "@storybook/addons": "^5.3.18",
     "@storybook/preset-create-react-app": "^2.1.1",
-    "@storybook/react": "^5.3.18"
+    "@storybook/react": "^5.3.18",
+    "storybook-react-router": "^1.0.8"
   },
   "proxy": "http://localhost:8080"
 }
