--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "react-dom": "^16.13.1",
     "react-query": "^2.5.11",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "react-toastify": "^6.0.8"
   },
   "scripts": {
